# hackathon-backend

./: Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  env_sample  pyproject.toml  web.Dockerfile
src/: manage.py
src/apps/auth/api/: urls.py
src/apps/base/api/: serializers.py
src/apps/base/migrations/: 0001_initial.py  0002_initial.py
src/apps/events/: admin.py  models.py
src/apps/events/api/: serializers.py  views.py
src/apps/events/migrations/: 0001_initial.py  0002_alter_event_participants.py  0003_alter_event_participants.py  0004_event_image.py  0005_event_coins_for_registration_event_coins_for_victory.py
src/apps/groups/: admin.py  consts.py  models.py
src/apps/groups/migrations/: 0001_initial.py  0002_alter_group_options.py
src/apps/users/: admin.py  consts.py  models.py  signals.py
src/apps/users/api/: serializers.py  views.py
src/apps/users/migrations/: 0001_initial.py  0002_alter_user_email_alter_user_first_name_and_more.py  0002_user_sex.py  0003_alter_user_email_alter_user_phone_number.py  0003_alter_user_options.py  0004_user_coins.py
src/apps/users/models/: accounts.py  users.py
src/apps/web/templates/main/: index.html
src/hackathon/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
